fix text align

--- a/src/components/Legend.css
+++ b/src/components/Legend.css
@@ -98,7 +98,10 @@
 .legend-select {
   width: 100%;
   text-align: center;
-  padding: 6px 10px;
+  text-align-last: center;
+  -webkit-text-align-last: center;
+  -moz-text-align-last: center;
+  padding: 6px 30px;
   font-size: 0.9em;
   font-weight: 500;
   border: 1px solid var(--border-color);
@@ -108,10 +111,10 @@
   cursor: pointer;
   appearance: none;
   -webkit-appearance: none;
+  -moz-appearance: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23666' d='M6 8L1 3h10z'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right 10px center;
-  padding-right: 30px;
 }
 
 .legend-select:focus {
@@ -168,7 +171,7 @@
   
   .legend-select {
     font-size: 0.85em;
-    padding: 5px 8px;
+    padding: 5px 25px;
   }
 }
 
